Fixed desktop menu flash on mobile

--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -15,7 +15,7 @@
 .wrapper p{
     margin: auto;
     margin-bottom: 30px;
-    max-width: 70ch;
+    max-width: 75ch;
 }
 
 .wrapper p:last-of-type{
