--- a/styles/backStory.module.css
+++ b/styles/backStory.module.css
@@ -18,4 +18,5 @@
 
 .textBox p{
     display: block;
+    max-width: 75ch;
 }
