--- a/styles/blogPostBody.module.css
+++ b/styles/blogPostBody.module.css
@@ -12,5 +12,5 @@
     padding-left: 30px;
     padding-right: 30px;
     font-size: 1.2rem;
-    max-width: 70ch;
+    max-width: 75ch;
 }
