--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -23,9 +23,9 @@
 .form input, .form textarea{
     padding:5px 5px;
     border: none;
-    width: 300px;
+    width: 325px;
     font-family: Montserrat;
-    font-size: 1rem;
+    font-size: 1.1rem;
 }
 
 .form textarea{
